--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,21 @@ async-timeout==4.0.2
 attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+cycler==0.11.0
+DateTime==4.4
 deprecation==2.1.0
+fonttools==4.31.2
 frozenlist==1.3.0
 idna==3.3
+kiwisolver==1.4.2
+matplotlib==3.5.1
 msgpack==1.0.3
 multidict==6.0.2
+mypytoolkit==1.3.2
 numpy==1.22.3
 packaging==21.3
 pandas==1.4.1
+Pillow==9.0.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2022.1
@@ -23,3 +30,4 @@ urllib3==1.26.9
 websocket-client==1.3.2
 websockets==10.2
 yarl==1.7.2
+zope.interface==5.4.0
