--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ alpaca-trade-api==2.0.0
 async-timeout==4.0.2
 attrs==21.4.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
+cryptography==36.0.2
 cycler==0.11.0
 DateTime==4.4
+Deprecated==1.2.13
 deprecation==2.1.0
 fonttools==4.31.2
 frozenlist==1.3.0
@@ -16,10 +19,13 @@ matplotlib==3.5.1
 msgpack==1.0.3
 multidict==6.0.2
 mypytoolkit==1.3.2
+nexmo==2.5.2
 numpy==1.22.3
 packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
+pycparser==2.21
+PyJWT==2.3.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2022.1
@@ -29,5 +35,6 @@ six==1.16.0
 urllib3==1.26.9
 websocket-client==1.3.2
 websockets==10.2
+wrapt==1.14.0
 yarl==1.7.2
 zope.interface==5.4.0
