Add helpful comments.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [Rebalancing]
+# rebalance threshold is the proportion a position should be off by in order for a correction to be made
 rebalance_threshold = 0.01
 
 [Portfolio]
+# portfolio type is conservative, moderately conservative, moderate, moderately aggressive, or aggressive
 portfolio_type = moderate
