Ability to specify additional email recipients and turn off text reports.

--- a/config.ini
+++ b/config.ini
@@ -5,3 +5,7 @@ rebalance_threshold = 0.01
 [Portfolio]
 # portfolio type is conservative, moderately conservative, moderate, moderately aggressive, or aggressive
 portfolio_type = moderate
+
+[Reports]
+text_reports = false
+additional_recipients = 
