Specify account multiplier to use margin or partial account size.

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ rebalance_threshold = 0.03
 [Portfolio]
 # portfolio type is conservative, moderately conservative, moderate, moderately aggressive, or aggressive
 portfolio_type = moderate
+account_multiplier = 1
 
 [Reports]
 text_reports = false
