--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,4 +26,6 @@ jobs:
           echo -en '${{ secrets.KEYS_INI }}' >> keys.ini
 
       - name: Test with pytest
-        run: python -m pytest
+        run: |
+          pip install pytest
+          python -m pytest
