--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Inject keys
         run: |
           echo -en '${{ secrets.KEYS_INI }}' >> keys.ini
+          echo -en '${{ secrets.CONFIG_INI }}' >> config.ini
 
       - name: Test with pytest
         run: |
