--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: tests
 
 on: [push, pull_request]
 
@@ -25,8 +25,21 @@ jobs:
         run: |
           echo -en '${{ secrets.KEYS_INI }}' >> keys.ini
           echo -en '${{ secrets.CONFIG_INI }}' >> config.ini
+          
+      - name: Install testing dependencies
+        run: pip install -U pytest-cov coverage-badge
 
       - name: Test with pytest
         run: |
-          pip install pytest
-          python -m pytest
+          python -m pytest --cov
+          
+      - name: Update coverage badge
+        if: always()  # update badge even if the tests failed
+        continue-on-error: true
+        run: |
+          coverage-badge -o tests/badge.svg -f
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add tests/badge.svg
+          git commit --author="Prerit Das <preritdas@gmail.com>" -m "Coverage badge updated after tests."
+          git push
